syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "inventories/receive_message.proto";
import "inventories/generic_message.proto";

message ListReceiveRequest {
  Pagination pagination = 1;
  string branch_id = 2;
  string purchase_id = 3;
}

message ReceivePaginationResponse {
  Pagination pagination = 1;
  string branch_id = 2;
  string purchase_id = 3;
  uint32 count = 4;
}

message ListReceiveResponse {
  ReceivePaginationResponse pagination = 1;
  Receive Receive = 2; 
}

service ReceiveService {
  rpc Create(Receive) returns (Receive) {}
  rpc Update(Receive) returns (Receive) {}
  rpc View(Id) returns (Receive) {}
  rpc List(ListReceiveRequest) returns (stream ListReceiveResponse) {}
}