syntax = "proto3";
package purchases;

option go_package = "pb/purchases;purchases";
option java_package = "com.wiradata.erpapplication.purchases";
option java_multiple_files = true;

import "purchases/supplier_message.proto";

message Purchase {
  string id = 1;
  string branch_id = 2;
  string branch_name = 3;
  Supplier supplier = 4;
  string code = 5;
  string purchase_date = 6;
  double price = 7;
  double additional_disc_amount = 8;
  float additional_disc_percentage = 9;
  double total_price = 10;
  string remark = 11;
  string created_at = 12;
  string created_by = 13;
  string updated_at = 14;
  string updated_by = 15;
  repeated PurchaseDetail details = 16;
}

message PurchaseDetail {
  string id = 1;
  string purchase_id = 2;
  string product_id = 3;
  string product_code = 4;
  string product_name = 5;
  int32 quantity = 6;
  double price = 7;
  double disc_amount = 8;
  float disc_percentage = 9;
  double total_price = 10;
}

message OutstandingPurchaseDetails {
  repeated PurchaseDetail detail = 1;
}

message OutstandingPurchaseRequest {
  string id = 1;
  string return_id = 2;
}